--- a/static/home.html
+++ b/static/home.html
@@ -50,11 +50,11 @@
               Rooms
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="/rooms/generals-quarters"
+              <a class="dropdown-item" href="/static/rooms/generals-quarters.html"
                 >General's Quarters</a
               >
-              <a class="dropdown-item" href="/rooms/colenols-suite"
-                >Colenol's Suite</a
+              <a class="dropdown-item" href="/static/rooms/colonels-suite.html"
+                >Colonel's Suite</a
               >
             </div>
           </li>
