--- a/static/reservation.html
+++ b/static/reservation.html
@@ -48,6 +48,16 @@
       --light: #f8f9fa;
       --dark: #343a40;
       */
+
+      .form-row {
+        margin-right: 0;
+        margin-left: 0;
+      }
+
+      .datepicker {
+        z-index: 100000;
+      }
+
     </style>
   </head>
 
@@ -181,101 +191,185 @@
       <div class="col">Right</div>
     </div>
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-      crossorigin="anonymous"
-    ></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.3/dist/js/datepicker-full.min.js"></script>
-    <script src="https://unpkg.com/notie"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.2/dist/js/datepicker-full.min.js"></script>
+<script src="https://unpkg.com/notie"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script>
-      notie.setOptions({
-        classes: {
-          backgroundSuccess: 'bg-success',
-        }
-      })
-    </script>
-
-    <script>
-      console.log("Hello world!");
-      let myParagraph = document.getElementById("myParagraph");
-      myParagraph.innerText = "Hello world!";
-      myParagraph.classList.add("text-primary");
-      /*document
-        .getElementById("colorButton")
-        .addEventListener("click", function () {
-          if (myParagraph.classList.contains("text-primary"))
-            myParagraph.classList.replace("text-primary", "text-success");
-          else myParagraph.classList.replace("text-success", "text-primary");
-        });*/
-        document
-        .getElementById("colorButton")
-        .addEventListener("click", function () {
-          notify("Button Clicked", "success")
-        });
-
-      function notify(msg, msgType) {     
-        notie.alert({
-          type: msgType, // optional, default = 4, enum: [1, 2, 3, 4, 5, 'success', 'warning', 'error', 'info', 'neutral']
-          text: msg,
-        })
-      }
-
-    </script>
-
-    <script>
-      const elem = document.getElementById("date_range");
-      const rangepicker = new DateRangePicker(elem, {
-        minDate: Date.now(),
-        clearButton: true,
-        format: "yyyy-mm-dd",
-      });
-    </script>
-
-    <script>
-      // Example starter JavaScript for disabling form submissions if there are invalid fields
+      let attention = Prompt();
+  
       (function () {
-        "use strict";
-        window.addEventListener(
-          "load",
-          function () {
-            // Fetch all the forms we want to apply custom Bootstrap validation styles to
-            var forms = document.getElementsByClassName("needs-validation");
-            // Loop over them and prevent submission
-            var validation = Array.prototype.filter.call(
-              forms,
-              function (form) {
-                form.addEventListener(
-                  "submit",
-                  function (event) {
-                    if (form.checkValidity() === false) {
-                      event.preventDefault();
-                      event.stopPropagation();
-                    }
-                    form.classList.add("was-validated");
-                  },
-                  false
-                );
-              }
-            );
-          },
-          false
-        );
+          'use strict';
+          window.addEventListener('load', function () {
+              // Fetch all the forms we want to apply custom Bootstrap validation styles to
+              let forms = document.getElementsByClassName('needs-validation');
+              // Loop over them and prevent submission
+              Array.prototype.filter.call(forms, function (form) {
+                  form.addEventListener('submit', function (event) {
+                      if (form.checkValidity() === false) {
+                          event.preventDefault();
+                          event.stopPropagation();
+                      }
+                      form.classList.add('was-validated');
+                  }, false);
+              });
+          }, false);
       })();
-    </script>
+  
+      document.getElementById("colorButton").addEventListener("click", function () {
+          let html = `
+          <form id="check-availability-form" action="" method="post" novalidate class="needs-validation">
+              <div class="form-row">
+                  <div class="col">
+                      <div class="form-row" id="reservation-dates-modal">
+                          <div class="col">
+                              <input disabled required class="form-control" type="text" name="start" id="start" placeholder="Arrival">
+                          </div>
+                          <div class="col">
+                              <input disabled required class="form-control" type="text" name="end" id="end" placeholder="Departure">
+                          </div>
+  
+                      </div>
+                  </div>
+              </div>
+          </form>
+          `;
+          attention.custom({
+              title: 'Choose your dates',
+              msg: html,
+          });
+      })
+  
+      const elem = document.getElementById('reservation-dates');
+      const rangePicker = new DateRangePicker(elem, {
+          format: "yyyy-mm-dd",
+      });
+  
+      function notify(msg, msgType) {
+          notie.alert({
+              type: msgType,
+              text: msg,
+          })
+      }
+  
+      function notifyModal(title, text, icon, confirmationButtonText) {
+          Swal.fire({
+              title: title,
+              html: text,
+              icon: icon,
+              confirmButtonText: confirmationButtonText
+          })
+      }
+  
+      function Prompt() {
+          let toast = function (c) {
+              const{
+                  msg = '',
+                  icon = 'success',
+                  position = 'top-end',
+  
+              } = c;
+  
+              const Toast = Swal.mixin({
+                  toast: true,
+                  title: msg,
+                  position: position,
+                  icon: icon,
+                  showConfirmButton: false,
+                  timer: 3000,
+                  timerProgressBar: true,
+                  didOpen: (toast) => {
+                      toast.addEventListener('mouseenter', Swal.stopTimer)
+                      toast.addEventListener('mouseleave', Swal.resumeTimer)
+                  }
+              })
+  
+              Toast.fire({})
+          }
+  
+          let success = function (c) {
+              const {
+                  msg = "",
+                  title = "",
+                  footer = "",
+              } = c
+  
+              Swal.fire({
+                  icon: 'success',
+                  title: title,
+                  text: msg,
+                  footer: footer,
+              })
+  
+          }
+  
+          let error = function (c) {
+              const {
+                  msg = "",
+                  title = "",
+                  footer = "",
+              } = c
+  
+              Swal.fire({
+                  icon: 'error',
+                  title: title,
+                  text: msg,
+                  footer: footer,
+              })
+  
+          }
+  
+          async function custom(c) {
+              const {
+                  msg = "",
+                  title = "",
+              } = c;
+  
+              const { value: formValues } = await Swal.fire({
+                  title: title,
+                  html: msg,
+                  backdrop: false,
+                  focusConfirm: false,
+                  showCancelButton: true,
+                  willOpen: () => {
+                      const elem = document.getElementById("reservation-dates-modal");
+                      const rp = new DateRangePicker(elem, {
+                          format: 'yyyy-mm-dd',
+                          showOnFocus: true,
+                      })
+                  },
+                  didOpen: () => {
+                      document.getElementById("start").removeAttribute("disabled");
+                      document.getElementById("end").removeAttribute("disabled");
+                  },
+                  preConfirm: () => {
+                      return [
+                          document.getElementById('start').value,
+                          document.getElementById('end').value
+                      ]
+                  }
+              })
+  
+              if (formValues) {
+                  Swal.fire(JSON.stringify(formValues))
+              }
+          }
+  
+          return {
+              toast: toast,
+              success: success,
+              error: error,
+              custom: custom,
+          }
+      }
+  
+  </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.3/dist/js/datepicker-full.min.js"></script>
   </body>
 </html>
