--- a/static/reservation.html
+++ b/static/reservation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Reservation</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -20,45 +20,7 @@
       type="text/css"
       href="https://unpkg.com/notie/dist/notie.min.css"
     />
-    <style>
-      .notie-background-success {
-        background-color: #28a745;
-      }
-
-      /*
-      --blue: #007bff;
-      --indigo: #6610f2;
-      --purple: #6f42c1;
-      --pink: #e83e8c;
-      --red: #dc3545;
-      --orange: #fd7e14;
-      --yellow: #ffc107;
-      --green: #28a745;
-      --teal: #20c997;
-      --cyan: #17a2b8;
-      --white: #fff;
-      --gray: #6c757d;
-      --gray-dark: #343a40;
-      --primary: #007bff;
-      --secondary: #6c757d;
-      --success: #28a745;
-      --info: #17a2b8;
-      --warning: #ffc107;
-      --danger: #dc3545;
-      --light: #f8f9fa;
-      --dark: #343a40;
-      */
-
-      .form-row {
-        margin-right: 0;
-        margin-left: 0;
-      }
-
-      .datepicker {
-        z-index: 100000;
-      }
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="/static/css/styles.css" />
   </head>
 
   <body>
